# homeKeeper

./: .gitignore  CMakeLists.txt  build.sh  buildMailServerImage.sh
bus/: CMakeLists.txt
common/: CMakeLists.txt  common.cpp  log.cpp  worker.cpp
db/: CMakeLists.txt
docker/: Dockerfile  mailServer
docker/etc/: setenv  work.prj
etc/: ip.sh  mysql.type  setenv  sql.cfg  work.prj  work.ubb
frame/: CMakeLists.txt  bus.cpp  master.cpp  node.hpp  slave.cpp  tools.cpp
homeKeeper/: CMakeLists.txt  downloadfile.hpp  homeKeeper.cpp  keeper.cpp  pubsub_msg.pb.cc  workFunctions.hpp
include/: EmailSender.hpp  MysqlDataBase.hpp  base64.hpp  common.h  curl.hpp  device.hpp  env.hpp  file.hpp  hmLog.hpp  instance.hpp  keeper.h  log.h  mailProxy.hpp  node.hpp  pubsub_msg.pb.h  raft.h  raft_private.h  sysKeeper.hpp  tblEmailInfo.hpp  tblIpInfo.hpp  tcpClient.hpp  tcpServer.hpp  threadPool.hpp
mailServer/: CMakeLists.txt  maiServer.cpp  mailServer.cpp  mailTest.cpp
master/: CMakeLists.txt  build.sh  master.cpp
node/: CMakeLists.txt  node.cpp
proxyServer/: CMakeLists.txt  proxyServer.cpp  testClient.cpp
raft/: CMakeLists.txt  node  raft.cpp  raft_server.c  raft_server_properties.c
sbin/: apt-get.sh  code.c  dockerstart.sh  gen.sh  moutwindowsdisk.sh  setGccVersion.sh  tcpdump.sh  testTable.txt
sqlGenerate/: CMakeLists.txt  sqlGen.cpp
test/: CMakeLists.txt  log_test.cpp  node_test.cpp
